fix spacing issue in root

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,6 +69,9 @@ button:focus-visible {
 
 body {
   background-color: #4B2842;
-  padding: 30px 40px;
   color: #F3F0E6;
+}
+
+:root {
+  padding: 30px 40px;
 }
